fully completed of the second goal of the project

--- a/project.ipynb
+++ b/project.ipynb
@@ -561,9 +561,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average number of orders per month that were not delivered due to the fact \n",
+      "that the products are shipped from the warehouse and the items are in transit to the recipient = 46.12 orders.\n",
+      "\n",
+      "Average number of orders per month that were not delivered \n",
+      "because the recipient canceled the order = 26.04 orders.\n",
+      "\n",
+      "Average number of orders per month that were not delivered \n",
+      "because the order is now unavailable = 25.38 orders.\n",
+      "\n",
+      "Average number of orders per month that were not delivered \n",
+      "due to waiting for customer order formation = 13.08 orders.\n",
+      "\n",
+      "Average number of orders per month that were not delivered \n",
+      "because a customer's order was in processing = 12.54 orders.\n",
+      "\n",
+      "Average number of orders per month that were not delivered\n",
+      "because a customer just created an order = 0.21 orders.\n",
+      "\n",
+      "Average number of orders per month that were not delivered\n",
+      "due to customers confirmation = 0.08 orders.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Shipment of items from warehouse\n",
+    "status_shipped = check_details('shipped')\n",
+    "print(f\"\"\"The average number of orders per month that were not delivered due to the fact \n",
+    "that the products are shipped from the warehouse and the items are in transit to the recipient = {status_shipped} orders.\"\"\")\n",
+    "\n",
+    "# Canceled orders\n",
+    "status_canceled = check_details('canceled')\n",
+    "print(f\"\"\"\\nAverage number of orders per month that were not delivered \n",
+    "because the recipient canceled the order = {status_canceled} orders.\"\"\")\n",
+    "\n",
+    "# Unavailable orders\n",
+    "status_unavailable = check_details('unavailable')\n",
+    "print(f\"\"\"\\nAverage number of orders per month that were not delivered \n",
+    "because the order is now unavailable = {status_unavailable} orders.\"\"\")\n",
+    "\n",
+    "# Invoiced orders\n",
+    "status_invoiced = check_details('invoiced')\n",
+    "print(f\"\"\"\\nAverage number of orders per month that were not delivered \n",
+    "due to waiting for customer order formation = {status_invoiced} orders.\"\"\")\n",
+    "\n",
+    "# Processing the assembly of items\n",
+    "status_processing = check_details('processing')\n",
+    "print(f\"\"\"\\nAverage number of orders per month that were not delivered \n",
+    "because a customer's order was in processing = {status_processing} orders.\"\"\")\n",
+    "\n",
+    "# Created orders\n",
+    "status_created = check_details('created')\n",
+    "print(f\"\"\"\\nAverage number of orders per month that were not delivered\n",
+    "because a customer just created an order = {status_created} orders.\"\"\")\n",
+    "\n",
+    "# Approved orders\n",
+    "status_approved = check_details('approved')\n",
+    "print(f\"\"\"\\nAverage number of orders per month that were not delivered\n",
+    "due to customers confirmation = {status_approved} orders.\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
