comleted the third goal of the project

--- a/project.ipynb
+++ b/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "4                     13056               campinas             SP  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "4           2018-02-26 00:00:00  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        "4  2017-02-13 13:57:51  199.90          18.14  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,20 +477,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Finding the earliest date\n",
     "start_order_date = orders.order_approved_at.min()\n",
     "\n",
-    "# Find the latest date\n",
+    "# Finding the latest date\n",
     "end_order_date = orders.order_approved_at.max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
     }
    ],
    "source": [
-    "# Determine the number of months contained in the dataset\n",
+    "# Determining the number of months contained in the dataset\n",
     "month_count = round((end_order_date - start_order_date).days / 30)\n",
     "\n",
     "print('The dataset has {} months'.format(month_count))"
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "Name: order_status, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -629,8 +629,490 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Determing the favorite day of the week on which a product is most often purchased"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>order_purchase_timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4244733e06e7ecb4970a6e2683c13e61</td>\n",
+       "      <td>2017-09-13 08:59:02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>e5f2d52b802189ee658865ca93d83a8f</td>\n",
+       "      <td>2017-04-26 10:53:06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>c777355d18b72b67abbeef9df44fd0fd</td>\n",
+       "      <td>2018-01-14 14:33:31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7634da152a4610f1595efa32f14722fc</td>\n",
+       "      <td>2018-08-08 10:00:35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ac6c3623068f30de03045865e4e10089</td>\n",
+       "      <td>2017-02-04 13:57:51</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         product_id order_purchase_timestamp\n",
+       "0  4244733e06e7ecb4970a6e2683c13e61      2017-09-13 08:59:02\n",
+       "1  e5f2d52b802189ee658865ca93d83a8f      2017-04-26 10:53:06\n",
+       "2  c777355d18b72b67abbeef9df44fd0fd      2018-01-14 14:33:31\n",
+       "3  7634da152a4610f1595efa32f14722fc      2018-08-08 10:00:35\n",
+       "4  ac6c3623068f30de03045865e4e10089      2017-02-04 13:57:51"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Merging databases and leaving columns 'product_id' and 'order_purchase_timestamp'\n",
+    "df2 = items.merge(orders)[['product_id', 'order_purchase_timestamp']]\n",
+    "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a function to convert the date to the format of the day of the week\n",
+    "def get_weekdays(d):\n",
+    "    return datetime.datetime.strptime(d, '%Y-%m-%d %H:%M:%S').strftime('%A')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>order_purchase_timestamp</th>\n",
+       "      <th>weekday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4244733e06e7ecb4970a6e2683c13e61</td>\n",
+       "      <td>2017-09-13 08:59:02</td>\n",
+       "      <td>Wednesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>e5f2d52b802189ee658865ca93d83a8f</td>\n",
+       "      <td>2017-04-26 10:53:06</td>\n",
+       "      <td>Wednesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>c777355d18b72b67abbeef9df44fd0fd</td>\n",
+       "      <td>2018-01-14 14:33:31</td>\n",
+       "      <td>Sunday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7634da152a4610f1595efa32f14722fc</td>\n",
+       "      <td>2018-08-08 10:00:35</td>\n",
+       "      <td>Wednesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ac6c3623068f30de03045865e4e10089</td>\n",
+       "      <td>2017-02-04 13:57:51</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         product_id order_purchase_timestamp    weekday\n",
+       "0  4244733e06e7ecb4970a6e2683c13e61      2017-09-13 08:59:02  Wednesday\n",
+       "1  e5f2d52b802189ee658865ca93d83a8f      2017-04-26 10:53:06  Wednesday\n",
+       "2  c777355d18b72b67abbeef9df44fd0fd      2018-01-14 14:33:31     Sunday\n",
+       "3  7634da152a4610f1595efa32f14722fc      2018-08-08 10:00:35  Wednesday\n",
+       "4  ac6c3623068f30de03045865e4e10089      2017-02-04 13:57:51   Saturday"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Adding a new column with the day of the week of the purchase\n",
+    "df2['weekday'] = df2.order_purchase_timestamp.apply(get_weekdays)\n",
+    "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>weekday</th>\n",
+       "      <th>order_purchase_timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00066f42aeeb9f3007548bb9d3f33c38</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00088930e925c41fd95ebfe695fd2655</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0009406fd7479715e4bef61dd91f2462</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>000b8f95fcb9e0096488278317764d19</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>000b8f95fcb9e0096488278317764d19</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         product_id    weekday  order_purchase_timestamp\n",
+       "0  00066f42aeeb9f3007548bb9d3f33c38     Sunday                         1\n",
+       "1  00088930e925c41fd95ebfe695fd2655    Tuesday                         1\n",
+       "2  0009406fd7479715e4bef61dd91f2462   Thursday                         1\n",
+       "3  000b8f95fcb9e0096488278317764d19     Friday                         1\n",
+       "4  000b8f95fcb9e0096488278317764d19  Wednesday                         1"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Creating a dataframe with a count of the number of orders of each item\n",
+    "df3 = df2.groupby(['product_id', 'weekday'], as_index=False)\\\n",
+    "        .agg({'order_purchase_timestamp': 'count'})\n",
+    "df3.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>order_purchase_timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00066f42aeeb9f3007548bb9d3f33c38</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00088930e925c41fd95ebfe695fd2655</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0009406fd7479715e4bef61dd91f2462</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>000b8f95fcb9e0096488278317764d19</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>000d9be29b5207b54e86aa1b1ac54872</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         product_id  order_purchase_timestamp\n",
+       "0  00066f42aeeb9f3007548bb9d3f33c38                         1\n",
+       "1  00088930e925c41fd95ebfe695fd2655                         1\n",
+       "2  0009406fd7479715e4bef61dd91f2462                         1\n",
+       "3  000b8f95fcb9e0096488278317764d19                         1\n",
+       "4  000d9be29b5207b54e86aa1b1ac54872                         1"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Creating a dataframe with a count of the maximum number of orders of each item\n",
+    "df4 = df3.groupby('product_id', as_index=False)\\\n",
+    "        .agg({'order_purchase_timestamp': 'max'})\n",
+    "df4.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>weekday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00066f42aeeb9f3007548bb9d3f33c38</td>\n",
+       "      <td>Sunday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00088930e925c41fd95ebfe695fd2655</td>\n",
+       "      <td>Tuesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0009406fd7479715e4bef61dd91f2462</td>\n",
+       "      <td>Thursday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>000b8f95fcb9e0096488278317764d19</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>000b8f95fcb9e0096488278317764d19</td>\n",
+       "      <td>Wednesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42700</th>\n",
+       "      <td>fff6177642830a9a94a0f2cba5e476d1</td>\n",
+       "      <td>Sunday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42701</th>\n",
+       "      <td>fff81cc3158d2725c0655ab9ba0f712c</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42702</th>\n",
+       "      <td>fff9553ac224cec9d15d49f5a263411f</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42703</th>\n",
+       "      <td>fffdb2d0ec8d6a61f0a0a0db3f25b441</td>\n",
+       "      <td>Tuesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42704</th>\n",
+       "      <td>fffe9eeff12fcbd74a2f2b007dde0c58</td>\n",
+       "      <td>Wednesday</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>42705 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             product_id    weekday\n",
+       "0      00066f42aeeb9f3007548bb9d3f33c38     Sunday\n",
+       "1      00088930e925c41fd95ebfe695fd2655    Tuesday\n",
+       "2      0009406fd7479715e4bef61dd91f2462   Thursday\n",
+       "3      000b8f95fcb9e0096488278317764d19     Friday\n",
+       "4      000b8f95fcb9e0096488278317764d19  Wednesday\n",
+       "...                                 ...        ...\n",
+       "42700  fff6177642830a9a94a0f2cba5e476d1     Sunday\n",
+       "42701  fff81cc3158d2725c0655ab9ba0f712c     Monday\n",
+       "42702  fff9553ac224cec9d15d49f5a263411f     Friday\n",
+       "42703  fffdb2d0ec8d6a61f0a0a0db3f25b441    Tuesday\n",
+       "42704  fffe9eeff12fcbd74a2f2b007dde0c58  Wednesday\n",
+       "\n",
+       "[42705 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Merging the two dataframes to determine the most common purchase day of the week\n",
+    "df5 = df4.merge(df3)[['product_id', 'weekday']]\n",
+    "df5"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### *Some products have several popular days to buy*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
