added project data files

--- a/project.ipynb
+++ b/project.ipynb
@@ -22,9 +22,9 @@
    "outputs": [],
    "source": [
     "# Downloading datasets for analysis\n",
-    "customers = pd.read_csv('https://getfile.dokpub.com/yandex/get/https://disk.yandex.ru/d/hfXo-PVswob2Pw')\n",
-    "orders = pd.read_csv('https://getfile.dokpub.com/yandex/get/https://disk.yandex.ru/d/gcSKaZgvvyYDeg')\n",
-    "items = pd.read_csv('https://getfile.dokpub.com/yandex/get/https://disk.yandex.ru/d/4yKVQbEMJoUU6A')"
+    "customers = pd.read_csv('olist_customers_dataset.csv')\n",
+    "orders = pd.read_csv('olist_orders_dataset.csv')\n",
+    "items = pd.read_csv('olist_order_items_dataset.csv')"
    ]
   },
   {
