added conclusions based on the results of data analysis

--- a/project.ipynb
+++ b/project.ipynb
@@ -5854,6 +5854,22 @@
    "source": [
     "*As you can see, most of the customers are users of the `normal_customers` segment, which is **65050 people**, on which a general marketing campaign can be run. For the rest of the clients, it is necessary to create individual ways of interaction according to the characteristics of each user segment.*"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusions"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*A lot of work has been done to research customer purchase data and their behavioral habits. To begin with, I found users who made no more than 1 purchase. There were quite a lot of them - **83688 users**. I find it helpful to think about improving the customer experience to encourage customers to make more purchases. Secondly, there are many orders in the data that were not delivered to customers for various reasons. More than **40%** of these orders were not delivered to customers due to long shipment or shipping problems at all. Further, I determined that most orders occur on **Mondays** and that, on average, each customer makes **more than one purchase** per month. After conducting a cohort analysis, a table of distribution of the customer retention rate was obtained. Looking at the customer retention rate, I can say with high confidence that customers like the products and they're ready to make more purchases. And at the end, RFM user clusters were built, and the average values of RFM metrics for each cluster were derived. A large proportion of customers are users of the `normal_customers` segment, which is **65,050 people**, on which a general marketing campaign can be run. For other customers, it is necessary to select an individual way of communication and maintaining product loyalty. I also think it is necessary to strive to move `loyal_customers` and `recent_customers` into the segment of the `best_customers` who make more frequent purchases.*"
+   ]
   }
  ],
  "metadata": {
